nonLevelPages/settings.css
/* =================== Settings Rulesets =================== */

@font-face {
    font-family: "Raleway-Local";
    src: url("../fonts/Raleway-VariableFont_wght.ttf");
}

h1 {
    font-weight: 400;
}

.buttonDiv{
 position:fixed;
 width:25vh;
 height:10vh;
 top:7vh;
 left:3vh;
}

.settingsBtn
{
    height:100%;
    /* width:13%; */
    border-radius:100%;
    border: 1px solid white;
    background-color:rgba(193, 193, 193, .25);
    padding:2%;
    margin-left:0.25%;
    margin-right:0.25%;
    outline:none;

}

.settingsImg{
    /* width:%; */
    height:100%;
    width:100%;
}

.settingsBtn:hover{
    /* border:3px; */
    background-color:rgba(193,193,193,.75);
}


.settingsBtn:select
{
    border: 2px solid white;
}

.hidden{
    display:none;
}

#settings, #instructions{
    position:absolute;
    background-color:rgba(255,255,255,0.9);
    width:70vw;
    height:70vh;
    border-radius:5%;
    top:20vh;
    left:15vw;
    z-index:4;

}

.xButton{
    width:5%;
    /* height:10%; */
    border-radius:100%;
    border: 1px solid black;
    text-align:center;
    padding-top:1.5%;
    padding-bottom:1.5%;
    float:right;
    margin:3%;
    font-family: 'Raleway-Local', sans-serif;
    font-weight: 400;
}

.xButton:hover{
    /* width:6%;
    border-width:3px;
    padding-top:2%;
    padding-bottom:2%; */

    border-width:3px;
    /* background-color:white; */
}

.spacerDiv{
    width:100%;
    height:25%;
}

/* parent soundSetting elements */
.soundSetting
{
    text-align:center;
    width:100%;
    clear:left;
    height:20%;
    margin:auto;
    
}

/* only the child soundSetting elements */
.setSelection{
    font-size:150%;
    float:left;
    text-align:center;
    font-family: 'Raleway-Local', sans-serif;
    font-weight: 400;
    border:2px solid black;
    margin:3%;
    padding:1%;
    border-radius:100%;

}


.colorSetting{
    text-align:center;
    width:100%;
    clear:left;
    height:20%;
    
}

.colorSelection.nonLevel{
    width:3vh;
    height:3vh;
}

.colorSelection.level{
    width:5.5vh;
    height:5.5vh;
}

.setSelection:hover{
    border-width:3px;
}

.noBorder{
    border: 0;
}

.bold{
    /* border: 3px solid black; */
    background-color:rgba(148, 148, 148, .70);
}

/* changes the cursor to a hand on hover */
.hand{
    cursor:pointer;
}

.selectX{
    color:white;
    font-size:100;
    font-family: 'Raleway-Local', sans-serif;
    font-weight: 400;
    width:100%;
    height:100%;
    padding:0;
}


/* ======================RULESETS THAT ONLY APPLY IN LEVEL PAGES=============================== */

#pauseAndPlay.container{
    position:fixed;
    width:50vw;
    height:10vh;
    top:7vh;
    left:7vh;
    z-index:5;
}


/* only the child soundSetting elements */
#pauseAndPlay.settingsBtn, #pauseAndPlay.settingsImg{
    font-size:150%;
    float:left;
    text-align:center;
    font-family: 'Raleway-Local', sans-serif;
    font-weight: 400;
    border:2px solid black;
    margin:3%;
    padding:1%;
    border-radius:100%;

}

.buttonDiv.level{
    left: 14% ;
}

#pauseDiv{
    position:absolute;
    width:100vw;
    height:100vh;
    z-index:4;
    top:0;
    left:0;
    background-color:rgba(0,0,0,0.25);
}



/* ===================================INSTRUCTIONS RULESETS======================================== */

/* sets fonts for all children of instructions div*/
#instructions{
    font-family: 'Raleway-Local', sans-serif;
    font-weight: 400;
    z-index:5;
}

/* tells the player the general idea of the game */
.mainInstructions{
 margin-left:3%;
 text-align:center;
}

.sectionTitle{
 float:left;  
 margin:4.5%;
 margin-top:0;
 
}

.instruction{
    clear:left;
}

.header{
   
    margin: 4%;
    float:left;
    margin-top:0;
}

.key{
    float:left;
    border: 2px solid darkgray;
    border-radius:10%;
    padding:3%;
    width:3vw;
    height:3vw;
    font-size:150%;
    text-align: center;
}

.notSquare{
    width: auto;
    height:fit-content;
    font-size:150%;
}

